small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 	<title>God See Me Through in this jouney</title>
 </head>El Roi</head>
 <body>
-
+<h1>God see me through this journey of life</h1>
 </body>
 </html>
