git commit new level.html

--- a/site/El Roi.html
+++ b/site/El Roi.html
@@ -5,25 +5,13 @@
 	<title>God See Me Through in this jouney</title>
 </head>El Roi</head>
 <body>
-<h1>God see me through this journey of life</h1>
-<h2>Some times i feel like just giving up on everything</h2>
-<p>At times am so confused that i feel like just giving up, give me the hope i need daily looking unto you at the cross is a joy that cannot be comprehended</p>
-<p>Oh Lord how do give thanks to you because your faithfulness to me is just something that i can't keep to my self, each day you mercy keeps me going your grace upon my life is so overwhelming 
-	Faithful are You Lord you are greatly to be praise in all the the earth your mercy endureth for ever.
-Who can stand against the Lord no one can no one will, wh  can stand against the king no one can, no one will, oh oh oh oh oh oh oh victory belongs to jesus, victory</p>
-<p>The love of Christ is something i can't figure out, why He loves me is something that gives me chills day in day out God faithful, Mercy and Grace</p>
-<p>Holy Holy Lord God Almighty You Are World Of My Praise Lord We Before You Majesty, Great are you lord, Great are Lord, Great are you Lord, Great are You Lord, Great You Lord, I have searched around and i have found that one is like you Yahweh ehhhhh,
-You are bigger than all that i ever imagined Yahweh ehh eh eh Yahweh, Yahweh Eh eh Yahweh,Yahweh, No one like you Lord faithful is your name no one you lord faithful is your name</p>
-<p>I love Jesus</p>
-</body>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>God is good</title>
-</head>
-<body>
-<p> Great Are you Lord</p>
+<p> Steps to give your life to christ</p>
+<div>
+<ol>
+<l1>Accept Him as your Lord and Savior</l1>
+<l2>Confess Your</l2>
+<l3>Aknowledge that you are a sinner</l3>
+</ol>
+</div>
 </body>
 </html>
