--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,210 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Oluwatobiloba</title>
+	<title></title>
 </head>
 <body>
-<p> God is great He has done soefehgyfgy much for me<span>SO</p> much!</span>
+	<p>
+<img src="images/logong
+" alt="MFM logo" title="This is the MFM Logo">
+
+</p>
+<p><img src="images/logo.png" alt="MFM Logo" width="100"
+height="100" align="left" />There are around
+10,000 living species of birds that inhabit
+different ecosystems from the Arctic to the
+Antarctic. Many species undertake long distance
+annual migrations, and many more perform shorter
+irregular journeys.</p>
+<hr />
+<p><img src="images/chart analysis.jpg" alt="Fx" width="100"
+height="100" align="right" />There are around
+10,000 living species of birds that inhabit
+different ecosystems from the Arctic to the
+Antarctic. Many species undertake long distance
+annual migrations, and many more perform shorter
+irregular journeys.</p>
+<table border="1" bgcolor="brown">
+<thead>
+<tr>
+<th>Date</th>
+<th>Income</th>
+<th>Expenditure</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<th>1st January</th>
+<td>250</td>
+<td>36</td>
+</tr>
+<tr>
+<th>2nd January</th>
+<td>285</td>
+<td>48</td>
+</tr>
+<!-- additional rows as above -->
+<tr>
+<th>31st January</th>
+<td>129</td>
+<td>64</td>
+</tr>
+</tbody>
+<tfoot>
+<tr>
+<td></td>
+<td>7824</td>
+<td>1241</td>
+</tr>
+</tfoot>
+</table>
+
+<table width="100" cellpadding="" cellspacing="20">
+<tr>
+<th width="150"></th>
+<th>Withdrawn</th>
+<th>Credit</th>
+<th>Balance</th>
+</tr>
+<tr>
+<th>January</th>
+<td>250.00</td>
+<td>660.50</td>
+<td>410.50</td>
+</tr>
+<tr>
+<th>February</th>
+<td>135.55</td>
+<td>895.20</td>
+<td>1170.15</td>
+</tr>
+</table>
+
+
+<table border="0.8">
+<tr>
+<th width="150"></th>
+<th>Withdrawn</th>
+<th>Credit</th>
+<th width="150" bgcolor="#red">Balance</th>
+</tr>
+<tr>
+<th>January</th>
+<td>250.00</td>
+<td>660.50</td>
+<td bgcolor="#cccccc">410.50</td>
+</tr>
+<tr>
+<th>February</th>
+<td>135.55</td>
+<td>895.20</td>
+<td bgcolor="#cccccc">1170.15</td>
+</tr>
+</table>
+<address>
+	<p><a href="mailto:tobiwilliams003@gmai.com">
+	tobiwilliams003@gmai.com </a> </address>
+✡Commodity
+
+Under commodity we trade
+<p><a href="https://www.coursera.org/">Cousera</a></p>
+<ol>
+<li><a href="new levels.html">New Levels</a></li>
+<li><a href="index.html">TOBI</a></li>
+<li><a href="mailto:nwlevels@gmail.com">Email Mr New Levels</a>
+<li><a href="http://www.imdb.com" target="_blank">IMDB</a></li>NEW WINDOWS
+<form action="file:///C:/Users/user/Desktop/Tobi%20%20Website%20Books/Young-Age-Fx/site/index.html">
+	<p>Vote for tobi williams in Big Brother Naija
+		<input type="text" name="Vote for tobi williams in Big Brother Naija" size="12"
+		maxlength="24">
+	
+</form>
+<form action="http://www.example.com/profile.php">
+<p>Please select your favorite genre:
+<br />
+<input type="radio" name="genre" value="rock"
+checked="checked" /> Rock
+<input type="radio" name="genre" value="pop" />
+Pop
+<input type="radio" name="genre" value="jazz" />
+Jazz
+</p>
+</form>
+<form action="http://www.example.com/profile.php">
+<p>Please select your favorite music service(s):
+<br />
+<input type="checkbox" name="service"
+value="itunes" checked="checked" /> iTunes
+<input type="checkbox" name="service"
+value="lastfm" /> Last.fm
+<input type="checkbox" name="service"
+value="spotify" /> Spotify
+</p>
+</form>
+<form action="http://www.example.com/add.php">
+<button><img src="images/forex study.jpg" alt="add"
+width="10" height="10" /> Add</button>
+<input type="hidden" name="bookmark"
+value="lyrics" />
+</form>
+<fieldset>
+<legend>Contact details</legend>
+<label>Email:<br />
+<input type="text" name="email" width="600" height="10" /></label><br />
+<label>Mobile:<br />
+<input type="text" name="mobile" /></label><br />
+<label>Telephone:<br />
+<input type="text" name="telephone" /></label>
+</fieldset>
+
+<div id="header">
+<img src="images/forex study.jpg" alt="Anish Kapoor" />
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="biography.html">Biography</a></li>
+<li><a href="works.html">Works</a></li>
+<li><a href="contact.html">Contact</a></li>
+</ul>
+</div><!-- end of header -->
+<iframe
+src="images/forex study.jpg
+&amp;output=embed"
+width="450"
+height="350"
+frameborder="0"
+scrolling="no">
+</iframe>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Adding a Flash Movie</title>
+<script type="text/javascript"
+src="http://ajax.googleapis.com/ajax/libs/
+swfobject/2.2/swfobject.js"></script>
+<script type="text/javascript">
+swfobject.embedSWF("videos/y2mate.com - Immortal Technique Dance With the Devil  Animated Short Film_480p.mp4",
+"bird", "400", "300", "8.0.0");</script>
+</head>
+<body>
+<div id="bird"><p>An animation of a bird taking
+a shower</p></div>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Adding HTML5 Video</title>
+</head>
+<body>
+  <p>Tobi Williams Body Builder</p>
+<video src="videos/y2mate.com - Immortal Technique Dance With the Devil  Animated Short Film_480p.mp4"
+poster="images/Tobi.jpg"
+width="400" height="300" align="right"
+preload
+controls
+loop>
+<p>A video of a puppy playing in the snow</p>
+</video>
+
 </body>
 </html>
