--- a/site/New Levels.html
+++ b/site/New Levels.html
@@ -5,12 +5,22 @@
 	<title>Foreign Exchange Trading Beginners</title>
 </head>
 <body>
+
+	<style>
+		body{background-color: grey;
+			font-family: Georgia, Times, serif;
+			font-size: 16px;}
+
+		h1, h2, h3{font-family: Arial, Verdana, sans-serif
+			color: white;
+		
+	</style>
 	
 	<h1 id="top">Foreign Exchange Course</h1>
 <h2>Stage 1</h2>
 <b>
 <ul>
-<li>INTRODUCTION</li>
+<li a href="#introduction" >INTRODUCTION</li>
 <li>WHAT IS FOREX</li>
 <li>WHAT IS TRADED ON FOREX</li>
 <li>WHO IS A FOREX BROOKER</li>
@@ -2089,7 +2099,7 @@ So you watch the video and ask your questions in the WhatsApp group
 
 Trade With Ayo Fx, [8/21/20, 6:53 PM]
 For those that have not been asking questions….this is the stage where you are gonna start asking questions
-
+<a href="#top">Going up</a>
 
 
 
